--- a/src/SharpBlue.vcxproj.filters
+++ b/src/SharpBlue.vcxproj.filters
@@ -34,9 +34,6 @@
     <ClCompile Include="PC/OGL_FragmentShader.cpp">
       <Filter>PC</Filter>
     </ClCompile>
-    <ClCompile Include="PC/OGL_Meshloader.cpp">
-      <Filter>PC</Filter>
-    </ClCompile>
     <ClCompile Include="PC/OGL_Renderer.cpp">
       <Filter>PC</Filter>
     </ClCompile>
@@ -81,6 +78,11 @@
     <ClCompile Include="PC/SDL_Platform.cpp">
       <Filter>PC</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="PC\SDL_Meshloader.cpp">
+      <Filter>PC</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
@@ -123,9 +125,6 @@
     </ClInclude>
     <ClInclude Include="Font.h" />
     <ClInclude Include="PC/OGL_FragmentShader.h">
-      <Filter>PC</Filter>
-    </ClInclude>
-    <ClInclude Include="PC/OGL_Meshloader.h">
       <Filter>PC</Filter>
     </ClInclude>
     <ClInclude Include="PC/OGL_Renderer.h">
@@ -187,6 +186,9 @@
       <Filter>PC</Filter>
     </ClInclude>
     <ClInclude Include="Platform.h" />
+    <ClInclude Include="PC\SDL_Meshloader.h">
+      <Filter>PC</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\res\shaders\basic.frag">
