Started shader refactor

--- a/src/SharpBlue.vcxproj
+++ b/src/SharpBlue.vcxproj
@@ -461,6 +461,7 @@
   <ItemGroup>
     <ClInclude Include="Cm_FpsMotor.h" />
     <ClInclude Include="Cm_MeshRenderer.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Cm_Camera.h" />
     <ClInclude Include="Component.h" />
@@ -476,6 +477,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='debugLib|PS3'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='debugLib|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="VITA/GXM_Fragment_shader.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|PS3'">true</ExcludedFromBuild>
