Spaghetti code all over the shop

--- a/src/SharpBlue.vcxproj
+++ b/src/SharpBlue.vcxproj
@@ -480,6 +480,7 @@
     </ClInclude>
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Shaders.h" />
     <ClInclude Include="Storage.h" />
     <ClInclude Include="VITA/GXM_Fragment_shader.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|PS3'">true</ExcludedFromBuild>
