--- a/src/SharpBlue.vcxproj.filters
+++ b/src/SharpBlue.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="PC/SDL_Event_Manager.cpp">
       <Filter>PC</Filter>
     </ClCompile>
-    <ClCompile Include="PC/SDL_Font.cpp">
-      <Filter>PC</Filter>
-    </ClCompile>
     <ClCompile Include="PS3\PS3_Font.cpp">
       <Filter>PS3</Filter>
     </ClCompile>
@@ -89,14 +86,16 @@
       <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="Storage.cpp" />
-    <ClCompile Include="Material.cpp" />
     <ClCompile Include="PC\OGL_Resources.cpp">
       <Filter>PC</Filter>
     </ClCompile>
-    <ClCompile Include="LibRocketInterface.cpp">
+    <ClCompile Include="PC/LibrocketSystemInterface.cpp">
       <Filter>PC</Filter>
     </ClCompile>
-    <ClCompile Include="LibrocketSystemInterface.cpp">
+    <ClCompile Include="PC/LibRocketRenderInterface.cpp">
+      <Filter>PC</Filter>
+    </ClCompile>
+    <ClCompile Include="PC\LibRocketInterface.cpp">
       <Filter>PC</Filter>
     </ClCompile>
   </ItemGroup>
@@ -136,7 +135,6 @@
     <ClInclude Include="PS3/PS3_Input_handler.h">
       <Filter>PS3</Filter>
     </ClInclude>
-    <ClInclude Include="Font.h" />
     <ClInclude Include="PC/OGL_FragmentShader.h">
       <Filter>PC</Filter>
     </ClInclude>
@@ -150,9 +148,6 @@
       <Filter>PC</Filter>
     </ClInclude>
     <ClInclude Include="PC/OGL_VertexShader.h">
-      <Filter>PC</Filter>
-    </ClInclude>
-    <ClInclude Include="PC/SDL_Font.h">
       <Filter>PC</Filter>
     </ClInclude>
     <ClInclude Include="PC/SDL_Event_Manager.h">
@@ -214,7 +209,14 @@
     <ClInclude Include="OGL_Resources.h">
       <Filter>PC</Filter>
     </ClInclude>
-    <ClInclude Include="LibRocketInterface.h">
+    <ClInclude Include="PC/LibRocketInterface.h">
+      <Filter>PC</Filter>
+    </ClInclude>
+    <ClInclude Include="UI.h" />
+    <ClInclude Include="PC\LibRocketRenderInterface.h">
+      <Filter>PC</Filter>
+    </ClInclude>
+    <ClInclude Include="PC\LibrocketSystemInterface.h">
       <Filter>PC</Filter>
     </ClInclude>
   </ItemGroup>
